	to the input search path.

    o	R CMD Rd2dvi now previews PDF output (as was documented) if
    	R_PDFVIEWER is set (as it will normally be on a Unix-aloke but
    	not on Windows).


BUG FIXES

    o	@ now gives an error (and not just a warning) if it is being
	applied to a non-S4 object.

    o   R CMD appends (not prepends) R's texmf path to TEXINPUTS.




	**************************************************
	*						 *
	*	       2.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.7.0 patched


NEW FEATURES

    o	tools::texi2dvi() has a new argument 'texinputs' to allow the
	TeX and bibtex input paths to be specified (even on MiKTeX).

    o	dev.copy2pdf() gains an 'out.type' argument to allow it to be
	used with cairo_pdf() or quartz(type = "pdf").


DEPRECATED & DEFUNCT

    o	The use of unserialize() on character strings is deprecated:
	that was a format used in R < 2.4.0.

    o	The C macro 'allocString' is deprecated -- use 'mkChar',
	or 'allocVector' directly if really necessary.


UTILITIES

    o	R CMD build tries harder to clean up the inst/doc directory
    	from the remnants of earlier builds.


BUG FIXES

    o	Encoding<- on NA_character_ converted it to "NA".

    o	Adobe Symbol was missing from the encodings in
	tools::charset_to_Encoding.

    o	diag(matrix(x, 0, 0)) now returns a 0-length vector of the
	correct mode, instead of always numeric.

    o	Under certain rare circumstances the parser could accept
    	invalid UTF-8 quoted strings.

    o	plot.default(x, y) now should correctly dispatch to Axis() methods
    	whether y is NULL or not.

    o	Cocoa Quartz window could close without warning under certain
	circumstances (specific autorelease pool flush).




		CHANGES IN R VERSION 2.7.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	The default graphics device in non-interactive use is now
	pdf() rather than postscript().	 [PDF viewers are now